no longer break into scrollbar navbar

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -101,3 +101,7 @@ input[type=text]:focus {
     border-style: solid;
     color: var(--highlight);
 }
+
+.flex-break {
+    flex-wrap: wrap;
+}
